stop tiles setting colours, in preferance of global theme setting them. Add href prop to AgendaTile and render link for agenda items. Prevent overflow scrollbar on tile content

--- a/app/assets/css/activity-item.less
+++ b/app/assets/css/activity-item.less
@@ -1,8 +1,3 @@
-.list-header {
-  .list-group-item;
-  .disabled;
-}
-
 .activity-item {
   .list-group-item;
 
